# Telegram-Message-Relayer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: urls.py  yasg.py
config/settings/: base.py  const.py  database.py  drf.py  security.py
server/: Makefile
server/config/: yasg.py
server/config/settings/: __init__.py  base.py
server/src/core/: models.py  serializers.py  services.py  urls.py  views.py
server/src/core/migrations/: 0002_alter_telegramtoken_token.py  0003_alter_telegramtoken_chat_id_and_more.py
src/: router.py
src/base/services/: msg.py  token.py
src/core/: models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_telegramtoken_token.py  0004_remove_telegramtoken_telegram_username_and_more.py  0005_rename_message_messagehistory_content_and_more.py
src/tg_bot/: apps.py  bot.py
src/tg_bot/config/: message.py
src/tg_bot/handlers/: base.py  utils.py
src/tg_bot/management/commands/: runbot.py
src/tg_bot/services/: __init__.py  services.py
tg-bot/: Dockerfile  bot.py  main.py
tg-bot/config/: const.py  message.py  messages.json
tg-bot/src/handlers/: __init__.py  handlers.py
tg-bot/src/services/: http_client.py  services.py
